edit: <메뉴타입> 메뉴 장바구니 추가 테스트 메소드명 변경